crates/analyzer/tests/snapshots/analysis__if_statement_2.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(\"features/if_statement_2.fe\", &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [
                            (
                                "val",
                                Base(
                                    Numeric(
                                        U256,
                                    ),
                                ),
                            ),
                        ],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                ],
            },
        ),
    },
}

note: 
  ┌─ features/if_statement_2.fe:4:12
  │
4 │         if val > 5:
  │            ^^^ attributes hash: 1230752710897721197
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/if_statement_2.fe:4:18
  │
4 │         if val > 5:
  │                  ^ attributes hash: 1230752710897721197
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/if_statement_2.fe:4:12
  │
4 │         if val > 5:
  │            ^^^^^^^ attributes hash: 519621297275845584
  │
  = ExpressionAttributes {
        typ: Base(
            Bool,
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/if_statement_2.fe:5:20
  │
5 │             return 1
  │                    ^ attributes hash: 1230752710897721197
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/if_statement_2.fe:7:20
  │
7 │             assert true
  │                    ^^^^ attributes hash: 519621297275845584
  │
  = ExpressionAttributes {
        typ: Base(
            Bool,
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/if_statement_2.fe:9:16
  │
9 │         return 0
  │                ^ attributes hash: 1230752710897721197
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/if_statement_2.fe:3:5
  │  
3 │ ╭     pub def bar(val: u256) -> u256:
4 │ │         if val > 5:
5 │ │             return 1
6 │ │         else:
7 │ │             assert true
8 │ │ 
9 │ │         return 0
  │ ╰────────────────^ attributes hash: 8154049851694611611
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [
            (
                "val",
                Base(
                    Numeric(
                        U256,
                    ),
                ),
            ),
        ],
        return_type: Base(
            Numeric(
                U256,
            ),
        ),
    }

note: 
  ┌─ features/if_statement_2.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │ 
3 │ │     pub def bar(val: u256) -> u256:
4 │ │         if val > 5:
  · │
8 │ │ 
9 │ │         return 0
  │ ╰────────────────^ attributes hash: 13799818761261950138
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [
                    (
                        "val",
                        Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    ),
                ],
                return_type: Base(
                    Numeric(
                        U256,
                    ),
                ),
            },
        ],
        init_function: None,
        events: [],
        structs: [],
        external_contracts: [],
    }

note: 
  ┌─ features/if_statement_2.fe:3:22
  │
3 │     pub def bar(val: u256) -> u256:
  │                      ^^^^ attributes hash: 4293763436908729629
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/if_statement_2.fe:3:31
  │
3 │     pub def bar(val: u256) -> u256:
  │                               ^^^^ attributes hash: 4293763436908729629
  │
  = Base(
        Numeric(
            U256,
        ),
    )


