crates/analyzer/tests/snapshots/analysis__if_statement_with_block_declaration.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(\"features/if_statement_with_block_declaration.fe\", &src,\n               &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                ],
            },
        ),
    },
}

note: 
  ┌─ features/if_statement_with_block_declaration.fe:4:12
  │
4 │         if true:
  │            ^^^^ attributes hash: 519621297275845584
  │
  = ExpressionAttributes {
        typ: Base(
            Bool,
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/if_statement_with_block_declaration.fe:5:27
  │
5 │             let y: u256 = 1
  │                           ^ attributes hash: 1230752710897721197
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/if_statement_with_block_declaration.fe:6:20
  │
6 │             return y
  │                    ^ attributes hash: 1230752710897721197
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/if_statement_with_block_declaration.fe:8:27
  │
8 │             let y: u256 = 1
  │                           ^ attributes hash: 1230752710897721197
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/if_statement_with_block_declaration.fe:9:20
  │
9 │             return y
  │                    ^ attributes hash: 1230752710897721197
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/if_statement_with_block_declaration.fe:3:5
  │  
3 │ ╭     pub fn bar() -> u256:
4 │ │         if true:
5 │ │             let y: u256 = 1
6 │ │             return y
7 │ │         else:
8 │ │             let y: u256 = 1
9 │ │             return y
  │ ╰────────────────────^ attributes hash: 5931278080780939395
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [],
        return_type: Base(
            Numeric(
                U256,
            ),
        ),
    }

note: 
  ┌─ features/if_statement_with_block_declaration.fe:5:13
  │
5 │             let y: u256 = 1
  │             ^^^^^^^^^^^^^^^ attributes hash: 4293763436908729629
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/if_statement_with_block_declaration.fe:8:13
  │
8 │             let y: u256 = 1
  │             ^^^^^^^^^^^^^^^ attributes hash: 4293763436908729629
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/if_statement_with_block_declaration.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │ 
3 │ │     pub fn bar() -> u256:
4 │ │         if true:
  · │
8 │ │             let y: u256 = 1
9 │ │             return y
  │ ╰────────────────────^ attributes hash: 5268314470252829497
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [],
                return_type: Base(
                    Numeric(
                        U256,
                    ),
                ),
            },
        ],
        init_function: None,
        events: [],
        structs: [],
        external_contracts: [],
    }

note: 
  ┌─ features/if_statement_with_block_declaration.fe:3:21
  │
3 │     pub fn bar() -> u256:
  │                     ^^^^ attributes hash: 4293763436908729629
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/if_statement_with_block_declaration.fe:5:20
  │
5 │             let y: u256 = 1
  │                    ^^^^ attributes hash: 4293763436908729629
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/if_statement_with_block_declaration.fe:8:20
  │
8 │             let y: u256 = 1
  │                    ^^^^ attributes hash: 4293763436908729629
  │
  = Base(
        Numeric(
            U256,
        ),
    )


