crates/analyzer/tests/snapshots/analysis__keccak.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(\"features/keccak.fe\", &src, module, &db)"

---
note: 
  ┌─ features/keccak.fe:3:5
  │  
3 │ ╭     pub fn return_hash_from_u8(val: u8[1]) -> u256:
4 │ │         return keccak256(val)
  │ ╰─────────────────────────────^ attributes hash: 3365860038500136191
  │  
  = FunctionSignature {
        params: [
            FunctionParam {
                name: "val",
                typ: Ok(
                    Array(
                        Array {
                            size: 1,
                            inner: Numeric(
                                U8,
                            ),
                        },
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Numeric(
                    U256,
                ),
            ),
        ),
    }

note: 
  ┌─ features/keccak.fe:6:5
  │  
6 │ ╭     pub fn return_hash_from_foo(val: u8[3]) -> u256:
7 │ │         return keccak256(val)
  │ ╰─────────────────────────────^ attributes hash: 14368707390067541026
  │  
  = FunctionSignature {
        params: [
            FunctionParam {
                name: "val",
                typ: Ok(
                    Array(
                        Array {
                            size: 3,
                            inner: Numeric(
                                U8,
                            ),
                        },
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Numeric(
                    U256,
                ),
            ),
        ),
    }

note: 
   ┌─ features/keccak.fe:9:5
   │  
 9 │ ╭     pub fn return_hash_from_u256(val: u8[32]) -> u256:
10 │ │         return keccak256(val)
   │ ╰─────────────────────────────^ attributes hash: 2195893687340139662
   │  
   = FunctionSignature {
         params: [
             FunctionParam {
                 name: "val",
                 typ: Ok(
                     Array(
                         Array {
                             size: 32,
                             inner: Numeric(
                                 U8,
                             ),
                         },
                     ),
                 ),
             },
         ],
         return_type: Ok(
             Base(
                 Numeric(
                     U256,
                 ),
             ),
         ),
     }

note: 
  ┌─ features/keccak.fe:4:26
  │
4 │         return keccak256(val)
  │                          ^^^ u8[1]: Memory => None

note: 
  ┌─ features/keccak.fe:4:16
  │
4 │         return keccak256(val)
  │                ^^^^^^^^^^^^^^ u256: Value => None

note: 
  ┌─ features/keccak.fe:7:26
  │
7 │         return keccak256(val)
  │                          ^^^ u8[3]: Memory => None

note: 
  ┌─ features/keccak.fe:7:16
  │
7 │         return keccak256(val)
  │                ^^^^^^^^^^^^^^ u256: Value => None

note: 
   ┌─ features/keccak.fe:10:26
   │
10 │         return keccak256(val)
   │                          ^^^ u8[32]: Memory => None

note: 
   ┌─ features/keccak.fe:10:16
   │
10 │         return keccak256(val)
   │                ^^^^^^^^^^^^^^ u256: Value => None

note: 
  ┌─ features/keccak.fe:4:16
  │
4 │         return keccak256(val)
  │                ^^^^^^^^^ attributes hash: 11888120106960716956
  │
  = BuiltinFunction {
        func: Keccak256,
    }

note: 
  ┌─ features/keccak.fe:7:16
  │
7 │         return keccak256(val)
  │                ^^^^^^^^^ attributes hash: 11888120106960716956
  │
  = BuiltinFunction {
        func: Keccak256,
    }

note: 
   ┌─ features/keccak.fe:10:16
   │
10 │         return keccak256(val)
   │                ^^^^^^^^^ attributes hash: 11888120106960716956
   │
   = BuiltinFunction {
         func: Keccak256,
     }


