crates/analyzer/tests/snapshots/analysis__math.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
   ┌─ math.fe:2:5
   │  
 2 │ ╭     pub fn sqrt(val: u256) -> u256 {
 3 │ │         let mut z: u256
 4 │ │         if val > 3 {
 5 │ │             z = val
   · │
14 │ │         return z
15 │ │     }
   │ ╰─────^ params: [{ label: None, name: val, typ: u256 }] -> u256

note: 
  ┌─ math.fe:3:17
  │
3 │         let mut z: u256
  │                 ^ mut u256
  ·
6 │             let mut x: u256 = val / 2 + 1
  │                     ^ mut u256

note: 
  ┌─ math.fe:4:12
  │
4 │         if val > 3 {
  │            ^^^   ^ u256
  │            │      
  │            u256

note: 
  ┌─ math.fe:4:12
  │
4 │         if val > 3 {
  │            ^^^^^^^ bool
5 │             z = val
  │             ^   ^^^ u256
  │             │    
  │             mut u256
6 │             let mut x: u256 = val / 2 + 1
  │                               ^^^   ^ u256
  │                               │      
  │                               u256

note: 
  ┌─ math.fe:6:31
  │
6 │             let mut x: u256 = val / 2 + 1
  │                               ^^^^^^^   ^ u256
  │                               │          
  │                               u256

note: 
  ┌─ math.fe:6:31
  │
6 │             let mut x: u256 = val / 2 + 1
  │                               ^^^^^^^^^^^ u256
7 │             while x < z {
  │                   ^   ^ mut u256
  │                   │    
  │                   mut u256

note: 
  ┌─ math.fe:7:19
  │
7 │             while x < z {
  │                   ^^^^^ bool
8 │                 z = x
  │                 ^   ^ mut u256
  │                 │    
  │                 mut u256
9 │                 x = (val / x + x) / 2
  │                 ^    ^^^   ^ mut u256
  │                 │    │      
  │                 │    u256
  │                 mut u256

note: 
  ┌─ math.fe:9:22
  │
9 │                 x = (val / x + x) / 2
  │                      ^^^^^^^   ^ mut u256
  │                      │          
  │                      u256

note: 
  ┌─ math.fe:9:21
  │
9 │                 x = (val / x + x) / 2
  │                     ^^^^^^^^^^^^^   ^ u256
  │                     │                
  │                     u256

note: 
   ┌─ math.fe:9:21
   │
 9 │                 x = (val / x + x) / 2
   │                     ^^^^^^^^^^^^^^^^^ u256
10 │             }
11 │         } else if val != 0 {
   │                   ^^^    ^ u256
   │                   │       
   │                   u256

note: 
   ┌─ math.fe:11:19
   │
11 │         } else if val != 0 {
   │                   ^^^^^^^^ bool
12 │             z = 1
   │             ^   ^ u256
   │             │    
   │             mut u256
13 │         }
14 │         return z
   │                ^ mut u256

note: 
   ┌─ math.fe:17:5
   │  
17 │ ╭     pub fn min(x: u256, y: u256) -> u256 {
18 │ │         return x if x < y else y
19 │ │     }
   │ ╰─────^ params: [{ label: None, name: x, typ: u256 }, { label: None, name: y, typ: u256 }] -> u256

note: 
   ┌─ math.fe:18:21
   │
18 │         return x if x < y else y
   │                     ^   ^ u256
   │                     │    
   │                     u256

note: 
   ┌─ math.fe:18:16
   │
18 │         return x if x < y else y
   │                ^    ^^^^^      ^ u256
   │                │    │           
   │                │    bool
   │                u256

note: 
   ┌─ math.fe:18:16
   │
18 │         return x if x < y else y
   │                ^^^^^^^^^^^^^^^^^ u256


