crates/analyzer/tests/snapshots/analysis__module_level_events.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ module_level_events.fe:4:5
  │
4 │     idx sender: address
  │     ^^^^^^^^^^^^^^^^^^^ address
5 │     idx receiver: address
  │     ^^^^^^^^^^^^^^^^^^^^^ address
6 │     value: u256
  │     ^^^^^^^^^^^ u256

note: 
   ┌─ module_level_events.fe:10:5
   │  
10 │ ╭     fn transfer(mut ctx: Context, to: address, value: u256) {
11 │ │         emit Transfer(ctx, sender: ctx.msg_sender(), receiver: to, value)
12 │ │     }
   │ ╰─────^ attributes hash: 4681643600085308816
   │  
   = FunctionSignature {
         self_decl: None,
         ctx_decl: Some(
             Mutable,
         ),
         params: [
             FunctionParam {
                 is_mut: true,
                 label: None,
                 name: "ctx",
                 typ: Ok(
                     Struct(
                         Struct {
                             name: "Context",
                             field_count: 0,
                         },
                     ),
                 ),
             },
             FunctionParam {
                 is_mut: false,
                 label: None,
                 name: "to",
                 typ: Ok(
                     Base(
                         Address,
                     ),
                 ),
             },
             FunctionParam {
                 is_mut: false,
                 label: None,
                 name: "value",
                 typ: Ok(
                     Base(
                         Numeric(
                             U256,
                         ),
                     ),
                 ),
             },
         ],
         return_type: Ok(
             Base(
                 Unit,
             ),
         ),
     }

note: 
   ┌─ module_level_events.fe:11:23
   │
11 │         emit Transfer(ctx, sender: ctx.msg_sender(), receiver: to, value)
   │                       ^^^          ^^^ Context: Memory
   │                       │             
   │                       Context: Memory

note: 
   ┌─ module_level_events.fe:11:36
   │
11 │         emit Transfer(ctx, sender: ctx.msg_sender(), receiver: to, value)
   │                                    ^^^^^^^^^^^^^^^^            ^^  ^^^^^ u256: Value
   │                                    │                           │    
   │                                    │                           address: Value
   │                                    address: Value

note: 
   ┌─ module_level_events.fe:11:9
   │
11 │         emit Transfer(ctx, sender: ctx.msg_sender(), receiver: to, value)
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ attributes hash: 17986960071624595337
   │
   = Event {
         name: "Transfer",
         fields: [
             EventField {
                 name: "sender",
                 typ: Ok(
                     Base(
                         Address,
                     ),
                 ),
                 is_indexed: true,
             },
             EventField {
                 name: "receiver",
                 typ: Ok(
                     Base(
                         Address,
                     ),
                 ),
                 is_indexed: true,
             },
             EventField {
                 name: "value",
                 typ: Ok(
                     Base(
                         Numeric(
                             U256,
                         ),
                     ),
                 ),
                 is_indexed: false,
             },
         ],
     }


