crates/analyzer/tests/snapshots/analysis__multi_param.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ multi_param.fe:2:5
  │  
2 │ ╭     pub fn bar(x: u256, y: u256, z: u256) -> Array<u256, 3>:
3 │ │         let my_array: Array<u256, 3>
4 │ │         my_array[0] = x
5 │ │         my_array[1] = y
6 │ │         my_array[2] = z
7 │ │         return my_array
  │ ╰───────────────────────^ attributes hash: 8770278506365184608
  │  
  = FunctionSignature {
        self_decl: None,
        ctx_decl: None,
        params: [
            FunctionParam {
                name: "x",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
            FunctionParam {
                name: "y",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
            FunctionParam {
                name: "z",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Array(
                Array {
                    size: 3,
                    inner: Numeric(
                        U256,
                    ),
                },
            ),
        ),
    }

note: 
  ┌─ multi_param.fe:3:23
  │
3 │         let my_array: Array<u256, 3>
  │                       ^^^^^^^^^^^^^^ Array<u256, 3>

note: 
  ┌─ multi_param.fe:4:9
  │
4 │         my_array[0] = x
  │         ^^^^^^^^ ^ u256: Value
  │         │         
  │         Array<u256, 3>: Memory

note: 
  ┌─ multi_param.fe:4:9
  │
4 │         my_array[0] = x
  │         ^^^^^^^^^^^   ^ u256: Value
  │         │              
  │         u256: Memory
5 │         my_array[1] = y
  │         ^^^^^^^^ ^ u256: Value
  │         │         
  │         Array<u256, 3>: Memory

note: 
  ┌─ multi_param.fe:5:9
  │
5 │         my_array[1] = y
  │         ^^^^^^^^^^^   ^ u256: Value
  │         │              
  │         u256: Memory
6 │         my_array[2] = z
  │         ^^^^^^^^ ^ u256: Value
  │         │         
  │         Array<u256, 3>: Memory

note: 
  ┌─ multi_param.fe:6:9
  │
6 │         my_array[2] = z
  │         ^^^^^^^^^^^   ^ u256: Value
  │         │              
  │         u256: Memory
7 │         return my_array
  │                ^^^^^^^^ Array<u256, 3>: Memory


