crates/analyzer/tests/snapshots/analysis__return_bool_inverted.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(\"features/return_bool_inverted.fe\", &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [
                            (
                                "some_condition",
                                Base(
                                    Bool,
                                ),
                            ),
                        ],
                        return_type: Base(
                            Bool,
                        ),
                    },
                ],
            },
        ),
    },
}

note: 
  ┌─ features/return_bool_inverted.fe:3:20
  │
3 │         return not some_condition
  │                    ^^^^^^^^^^^^^^ attributes hash: 519621297275845584
  │
  = ExpressionAttributes {
        typ: Base(
            Bool,
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_bool_inverted.fe:3:16
  │
3 │         return not some_condition
  │                ^^^^^^^^^^^^^^^^^^ attributes hash: 519621297275845584
  │
  = ExpressionAttributes {
        typ: Base(
            Bool,
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_bool_inverted.fe:2:5
  │  
2 │ ╭     pub def bar(some_condition: bool) -> bool:
3 │ │         return not some_condition
  │ ╰─────────────────────────────────^ attributes hash: 3137865727141668606
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [
            (
                "some_condition",
                Base(
                    Bool,
                ),
            ),
        ],
        return_type: Base(
            Bool,
        ),
    }

note: 
  ┌─ features/return_bool_inverted.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │     pub def bar(some_condition: bool) -> bool:
3 │ │         return not some_condition
  │ ╰─────────────────────────────────^ attributes hash: 13440270876536399213
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [
                    (
                        "some_condition",
                        Base(
                            Bool,
                        ),
                    ),
                ],
                return_type: Base(
                    Bool,
                ),
            },
        ],
        init_function: None,
        events: [],
        structs: [],
        external_contracts: [],
    }

note: 
  ┌─ features/return_bool_inverted.fe:2:33
  │
2 │     pub def bar(some_condition: bool) -> bool:
  │                                 ^^^^ attributes hash: 5425972608982369985
  │
  = Base(
        Bool,
    )

note: 
  ┌─ features/return_bool_inverted.fe:2:42
  │
2 │     pub def bar(some_condition: bool) -> bool:
  │                                          ^^^^ attributes hash: 5425972608982369985
  │
  = Base(
        Bool,
    )


