crates/analyzer/tests/snapshots/analysis__return_bool_op_and.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_bool_op_and.fe:2:5
  │  
2 │ ╭     pub fn bar(x: bool, y: bool) -> bool:
3 │ │         return x and y
  │ ╰──────────────────────^ attributes hash: 11693897585276220683
  │  
  = FunctionSignature {
        self_decl: None,
        ctx_decl: None,
        params: [
            FunctionParam {
                name: "x",
                typ: Ok(
                    Base(
                        Bool,
                    ),
                ),
            },
            FunctionParam {
                name: "y",
                typ: Ok(
                    Base(
                        Bool,
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Bool,
            ),
        ),
    }

note: 
  ┌─ return_bool_op_and.fe:3:16
  │
3 │         return x and y
  │                ^     ^ bool: Value
  │                │      
  │                bool: Value

note: 
  ┌─ return_bool_op_and.fe:3:16
  │
3 │         return x and y
  │                ^^^^^^^ bool: Value


